--- a/about.html
+++ b/about.html
@@ -21,24 +21,32 @@
     </header>
     <main>
         <section id="about">
-            <img id="logo"src="./assets/task1/Logo Mighty ducks-01.png" alt="Mighty Ducks logo">
-            <figure>
-                <img class= "imagen" src="./assets/task1/hockey  2.jpg" alt="Imagen Hockey 2">
-                <figcaption>Fig.2 </figcaption>
-            </figure>
-            <h3>Mision</h3>
-            <p>To support young athletes living Chicago's northside neighborhood, who have an interest in 
-                learning and playing soccer, with opportunities to learn and practice skills related to the game of 
-                hockey, specifically those skills around team cooperation and good sportsmanship</p>
-            <h3>Vision</h3>
-            <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes 
-                through the building of character, self-discipline, and leadership.</p>
-            <h3>General Information</h3>
-            <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing 
-                Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a 
-                member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside 
-                neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of 
-                parents and previous league members</p>
+            <img id="banner-image" src="./assets/task2/design1_image1.jpg" alt="banner image 1">
+                <h2 class="subtitle">About Us</h2>
+                <div class="container">
+                    <div class="content">
+                        <img id="logo"src="./assets/task1/Logo Mighty ducks-01.png" alt="Mighty Ducks logo">
+                        <figure>
+                            <img class= "imagen" src="./assets/task1/hockey  2.jpg" alt="Imagen Hockey 2">
+                            <figcaption>Fig.2 </figcaption>
+                        </figure>
+                    </div>
+                    <div class="content content2">
+                        <h3>Mision</h3>
+                        <p>To support young athletes living Chicago's northside neighborhood, who have an interest in 
+                            learning and playing soccer, with opportunities to learn and practice skills related to the game of 
+                            hockey, specifically those skills around team cooperation and good sportsmanship</p>
+                        <h3>Vision</h3>
+                        <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes 
+                            through the building of character, self-discipline, and leadership.</p>
+                        <h3>General Information</h3>
+                        <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing 
+                            Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a 
+                            member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside 
+                            neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of 
+                            parents and previous league members</p>
+                    </div>
+                </div>
         </section>
        
     </main>
