--- a/contact.html
+++ b/contact.html
@@ -21,14 +21,22 @@
     </header>
     <main>
         <section id="contact">
-            <img id="logo"src="./assets/task1/Logo Mighty ducks-01.png" alt="Mighty Ducks logo">
-            <figure>
-                <img class= "imagen" src="./assets/task1/hockey 3.jpg" alt="Imagen Hockey 3">
-                <figcaption>Fig.3 </figcaption>
-            </figure>
-            <p>Please email us at <a href="mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-            <p>We reply to your email as soon as we can</p>
+            <img id="banner-image" src="./assets/task2/design1_image1.jpg" alt="banner image 1">
+            <div class="container">
+               <div class="content">
+                <img id="logo"src="./assets/task1/Logo Mighty ducks-01.png" alt="Mighty Ducks logo">
+                <figure>
+                    <img class= "imagen" src="./assets/task1/hockey 3.jpg" alt="Imagen Hockey 3">
+                    <figcaption>Fig.3 </figcaption>
+                </figure>
+               </div>
+            <div class="content">
+                <p>Please email us at <a href="mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+                <p>We reply to your email as soon as we can</p>
+            </div>
 
+            </div>
+            
         </section>
     </main>
 </body>
