--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 <figcaption>Fig.1 </figcaption>
                             </figure>
                     </div>
-                    <div class="content">
+                    <div class="content content2">
                         <h3>August 4</h3>
                         <p>MDSL Fundraiser</p>
                         <h3>August 16</h3>
