--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     
         <nav>
             <a href="./index.html">Home</a>
-            <a href="./about.html">About Us</a>
+            <a href="./about.html" style="background-color: green; color:white"">About Us</a>
             <a href="./contact.html">Contact</a>
         </nav>
         
