--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="./index.html">Home</a>
             <a href="./about.html">About Us</a>
-            <a href="./contact.html">Contact</a>
+            <a href="./contact.html" style="background-color: green; color:white"">Contact</a>
         </nav>
         
     </header>
