--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Mighty Ducks Hockey League</h1>
     
         <nav>
-            <a href="./index.html">Home</a>
+            <a href="./index.html" style="background-color: green; color:white">Home</a>
             <a href="./about.html">About Us</a>
             <a href="./contact.html">Contact</a>
         </nav>
