Se terminó de reestructurar el sitio web de acuerdo a las especificaciones del cliente

--- a/index.html
+++ b/index.html
@@ -23,29 +23,31 @@
         <main>
             <section id="home">
                 <h2 class="subtitle">Upcoming Events</h2>
-                <aside class="content1">
-                        <figure>
-                            <img src="./assets/task1/Logo Mighty ducks-01.png" alt="Mighty Ducks Logo">
-                            <Figcaption>Mighty Ducks Logo</Figcaption>
-                        </figure>
-                        <figure>
-                            <img class= "imagen" src="./assets/task1/hockey  1.jpg" alt="Imagen Hockey 1">
-                            <figcaption>Fig.1 </figcaption>
-                        </figure>
-                </aside>
-                <article class="content2">
+                <article class="content1">
                     <h3>August 4</h3>
                     <p>MDSL Fundraiser</p>
                 </article>
-                <article class="content2">
+                <article class="content1">
                     <h3>August 16</h3>
                     <p>Season Kick-off: Meet the Teams</p>
                 </article>
-                <article class="content2">
+                <article class="content1">
                     <h3>September 1</h3>
                     <p>First Game of the season (Check Game Schedule for details)</p>
                 </article>
+                <aside class="content2">
+                    <figure>
+                        <img class= "imagen"src="./assets/task1/Logo Mighty ducks-01.png" alt="Mighty Ducks Logo">
+                        <Figcaption>Mighty Ducks Logo</Figcaption>
+                    </figure>
+                    <figure>
+                        <img class= "imagen" src="./assets/task1/hockey  1.jpg" alt="Imagen Hockey 1">
+                        <figcaption>Hockey Player</figcaption>
+                    </figure>
+                </aside>
             </section>
+            
+           
         </main>
     </body>
 </html>
