Se reorganizaron y renombraron los archivos

--- a/html/about.html
+++ b/html/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" href="./assets/task2/icono_Mighty_Ducks.ico" type="image/x-icon">
     <title>Mighty Ducks</title>
 </head>
@@ -14,9 +14,9 @@
         <h1>Mighty Ducks Hockey League</h1>
     
         <nav>
-            <a href="./index.html">Home</a>
-            <a href="./about.html" style="background-color: green; color:white">About Us</a>
-            <a href="./contact.html">Contact</a>
+            <a href="../html/home.html">Home</a>
+            <a href="../html/about.html" style="background-color: green; color:white">About Us</a>
+            <a href="../html/contact.html">Contact</a>
         </nav>
         
     </header>
@@ -44,11 +44,11 @@
                     </article>
                     <aside class="content2">
                         <figure>
-                            <img class= "imagen"src="./assets/task1/Logo Mighty ducks-01.png" alt="Mighty Ducks Logo">
+                            <img class= "imagen" src="../assets/task1/Mighty_Ducks_Logo.png" alt="Mighty Ducks Logo">
                             <Figcaption>Mighty Ducks Logo</Figcaption>
                         </figure>
                         <figure>
-                            <img class= "imagen" src="./assets/task1/hockey  2.jpg" alt="Imagen Hockey 1">
+                            <img class= "imagen" src="../assets/task1/hockey2.jpg" alt="Hockey image 2">
                             <figcaption>Hockey Player</figcaption>
                         </figure>
                     </aside>  
