--- a/html/contact.html
+++ b/html/contact.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" href="./assets/task2/icono_Mighty_Ducks.ico" type="image/x-icon">
-    <title>Mighty Ducks</title>
+    <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
-            <a href="./index.html">Home</a>
-            <a href="./about.html">About Us</a>
-            <a href="./contact.html" style="background-color: green; color:white">Contact</a>
+            <a href="../html/home.html">Home</a>
+            <a href="../html/about.html">About Us</a>
+            <a href="../html/contact.html" style="background-color: green; color:white">Contact</a>
         </nav>
     </header>
     <main>
@@ -27,11 +27,11 @@
             </article>
             <aside class="content2">
                 <figure>
-                    <img class= "imagen"src="./assets/task1/Logo Mighty ducks-01.png" alt="Mighty Ducks Logo">
+                    <img class= "imagen" src="../assets/task1/Mighty_Ducks_Logo.png" alt="Mighty Ducks Logo">
                     <Figcaption>Mighty Ducks Logo</Figcaption>
                 </figure>
                 <figure>
-                    <img class= "imagen" src="./assets/task1/hockey 3.jpg" alt="Hockey Player">
+                    <img class= "imagen" src="../assets/task1/hockey3.jpg" alt="Hockey image 3">
                     <figcaption>Hockey Player</figcaption>
                 </figure>
             </aside>
