--- a/html/home.html
+++ b/html/home.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
         <link rel="shortcut icon" href="./assets/task2/icono_Mighty_Ducks.ico" type="image/x-icon">
-        <title>Mighty Ducks</title>
+        <title>Mighty Ducks Hockey League</title>
     </head>
     <body>
         <header>
@@ -14,9 +14,9 @@
             <h1>Mighty Ducks Hockey League</h1>
         
             <nav>
-                <a href="./index.html" style="background-color: green; color:white">Home</a>
-                <a href="./about.html">About Us</a>
-                <a href="./contact.html">Contact</a>
+                <a href="../html/home.html" style="background-color: green; color:white">Home</a>
+                <a href="../html/about.html">About Us</a>
+                <a href="../html/contact.html">Contact</a>
             </nav>
             <!--<img id="banner" src="./assets/task2/design1_image1.jpg" alt="Banner Hockey">-->
         </header>
@@ -37,11 +37,11 @@
                 </article>
                 <aside class="content2">
                     <figure>
-                        <img class= "imagen"src="./assets/task1/Logo Mighty ducks-01.png" alt="Mighty Ducks Logo">
+                        <img class= "imagen" src="../assets/task1/Mighty_Ducks_Logo.png" alt="Mighty Ducks Logo">
                         <Figcaption>Mighty Ducks Logo</Figcaption>
                     </figure>
                     <figure>
-                        <img class= "imagen" src="./assets/task1/hockey  1.jpg" alt="Imagen Hockey 1">
+                        <img class= "imagen" src="../assets/task1/hockey1.jpg" alt="Hockey image 1">
                         <figcaption>Hockey Player</figcaption>
                     </figure>
                 </aside>
