Se redujo la distancia entre las imágenes y articulos del contenido del sitio web

--- a/html/contact.html
+++ b/html/contact.html
@@ -32,7 +32,7 @@
                 </figure>
                 <figure>
                     <img class= "imagen" src="../assets/task1/hockey3.jpg" alt="Hockey image 3">
-                    <figcaption>Hockey Player</figcaption>
+                    <figcaption>Hockey Players</figcaption>
                 </figure>
             </aside>
         
