se corrigieron errores con respecto a las redirecciones de los botones de la página

--- a/html/contact.html
+++ b/html/contact.html
@@ -16,13 +16,14 @@
             <a href="../index.html">Home</a>
             <a href="./about.html">About Us</a>
             <a href="#">Contact</a>
-            <a href="./html/rules.html">Rules</a>
-            <a href="./html/game_information.html">Game Info</a>
+            <a href="./rules.html">Rules</a>
+            <a href="./game_information.html">Game Info</a>
         </nav>
     </header>
     <main>
+        <img class="banner" src="../assets/task2/design1_image2.jpg" alt="Banner">
         <section>
-            <img class="banner" src="../assets/task2/design1_image2.jpg" alt="Banner">
+            
             <h2 class="subtitle">Contact</h2>
             <div class="container">
                 <article class="content1">
