se agregó la galería a rules.html y game_information.html

--- a/html/game_information.html
+++ b/html/game_information.html
@@ -24,7 +24,22 @@
         <img class="banner" src="../assets/task2/design1_image2.jpg" alt="Banner">
         <section>
             <h2 class="subtitle">Game Information</h2>
+            <div class="container">
+                
+            </div>
         </section>
+        <section class="gallery">
+            <h2 class="subtitle">Gallery</h2>
+            <div class="images">
+                <img class="image" src="../assets/task1/hockey1.jpg" alt="image1">
+                <img class="image" src="../assets/task1/hockey2.jpg" alt="image2">
+                <img class="image" src="../assets/task1/hockey3.jpg" alt="image3">
+                <img class="image" src="../assets/task2/design1_image1.jpg" alt="image4">
+            </div>
+        </section>
+        <footer>
+            <p>Developed by Alan</p>
+        </footer>
     </main>
 </body>
 </html>
