--- a/html/contact.html
+++ b/html/contact.html
@@ -42,6 +42,9 @@
                 </div>
             </section>
         </section>
+        <footer>
+            <p>Developed by Alan</p>
+        </footer>
     </main>
 </body>
 </html>
