--- a/html/game_information.html
+++ b/html/game_information.html
@@ -24,9 +24,83 @@
         <img class="banner" src="../assets/task2/design1_image2.jpg" alt="Banner">
         <section>
             <h2 class="subtitle">Game Information</h2>
-            <div class="container">
-                
+            <div class="rules">
+                <div class="game_content">
+                 <h3 class="game_desc">Fall Schedule</h3>
+                 <u><p class="game_desc">All games take place on Saturday</p></u>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>SEPTEMBER</th>
+                                <th>Teams</th>
+                                <th>Locations</th>
+                                <th>Times</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td rowspan="2">9/01</td>
+                                <td>U1 and U4</td>
+                                <td>AJ Katzenmaier</td>
+                                <td>9:30 a.m.</td>
+                            </tr>
+                            <tr>
+                                <td>U3 and U2</td>
+                                <td>Greenbay</td>
+                                <td>1:00 p.m.</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">9/08</td>
+                                <td>U5 and U6</td>
+                                <td>Howard A Yeager</td>
+                                <td>9:30 a.m.</td>
+                            </tr>
+                            <tr>
+                                <td>U6 and U1</td>
+                                <td>Marjorie P Hart</td>
+                                <td>1:00 p.m.</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">9/15</td>
+                                <td>U2 and U4</td>
+                                <td>North</td>
+                                <td>9:30 a.m.</td>
+                            </tr>
+                            <tr>
+                                <td>U3 and U5</td>
+                                <td>AJ Katzenmaier</td>
+                                <td>1:00 p.m.</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">9/22</td>
+                                <td>U1 and U3</td>
+                                <td>South</td>
+                                <td>9:30 p.m.</td>
+                            </tr>
+                            <tr>
+                                <td>U2 and U6</td>
+                                <td>Howard A Yeager</td>
+                                <td>1:00 p.m.</td>
+                            </tr>
+                            <tr>
+                                <td>9/29</td>
+                                <td>U4 and U5</td>
+                                <td>Greenbay</td>
+                                <td>9:30 a.m.</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="game_details">
+                        <p><b>Facility Type: </b>Outdoor</p>
+                        <p><b>Additional Information: </b>If deemed necesary by MDHL games may be
+                        shortened or cancelled due to extreme weather conditions</p>
+                    </div>
+                    <div class="game_details">
+                        <p><b>Please direct all questions to: </b>Michael Randall, League Coordinator</p>
+                        <p class="inline"><b>Phone: </b>(630)690-8132</p> <p class="inline"><b>Email: </b>michael.randall@chihockey.org</p>
+                    </div>
             </div>
+        </div>
         </section>
         <section class="gallery">
             <h2 class="subtitle">Gallery</h2>
@@ -35,6 +109,7 @@
                 <img class="image" src="../assets/task1/hockey2.jpg" alt="image2">
                 <img class="image" src="../assets/task1/hockey3.jpg" alt="image3">
                 <img class="image" src="../assets/task2/design1_image1.jpg" alt="image4">
+            </div>
             </div>
         </section>
         <footer>
