se pasaron los archivos por el validador de html y se hicieron las correcciones necesarias

--- a/html/game_information.html
+++ b/html/game_information.html
@@ -27,7 +27,7 @@
             <div class="rules">
                 <div class="game_content">
                  <h3 class="game_desc">Fall Schedule</h3>
-                 <u><p class="game_desc">All games take place on Saturday</p></u>
+                 <p class="game_desc"><u>All games take place on Saturday</u></p>
                     <table>
                         <thead>
                             <tr>
@@ -109,7 +109,6 @@
                 <img class="image" src="../assets/task1/hockey2.jpg" alt="image2">
                 <img class="image" src="../assets/task1/hockey3.jpg" alt="image3">
                 <img class="image" src="../assets/task2/design1_image1.jpg" alt="image4">
-            </div>
             </div>
         </section>
         <footer>
