se corrigió el error de que los mails no abrian el correo para ser redactados

--- a/html/contact.html
+++ b/html/contact.html
@@ -28,7 +28,7 @@
             <div class="container">
                 <article class="content1">
                     <h3>E-mail</h3>
-                    <p>Please email us at <a href="mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+                    <p>Please email us at <a href="Mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
                     <p>We reply to your email as soon as we can</p>
                 </article>
             </div>
