--- a/html/game_information.html
+++ b/html/game_information.html
@@ -97,7 +97,7 @@
                     </div>
                     <div class="game_details">
                         <p><b>Please direct all questions to: </b>Michael Randall, League Coordinator</p>
-                        <p class="inline"><b>Phone: </b>(630)690-8132</p> <p class="inline"><b>Email: </b>michael.randall@chihockey.org</p>
+                        <p class="inline"><b>Phone: </b>(630)690-8132</p> <p class="inline"><b>Email: </b><a href="Mailto:michael.randall@chihockey.org">michael.randall@chihockey.org</a></p>
                     </div>
             </div>
         </div>
