se corrigieron algunos errores de sintaxis

--- a/html/about.html
+++ b/html/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img class= "logo" src="../assets/task1/Mighty_Ducks_Logo.png" alt="Mighty Ducks Logo">
+        <img class="logo" src="./assets/task1/Mighty_ducks_logo.png" alt="mighty ducks logo">
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
             <a href="../index.html">Home</a>
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <img class="banner" src="../assets/task2/design1_image2.jpg" alt="Banner">
+        <img class="banner" src="../assets/task2/design1_image2.jpg" alt="banner">
         <section>
             <h2 class="subtitle">About Us</h2>
             <div class="container">
