--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/styles.css">
-        <link rel="shortcut icon" href="./assets/task2/icono_Mighty_Ducks.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="./assets/task2/icono_mighty_ducks.ico" type="image/x-icon">
         <title>Mighty Ducks Hockey League</title>
     </head>
     <body>
         <header>
-            <img class= "logo" src="./assets/task1/Mighty_Ducks_Logo.png" alt="Mighty Ducks Logo">
+            <img class="logo" src="./assets/task1/Mighty_ducks_logo.png" alt="mighty ducks logo">
             <h1>Mighty Ducks Hockey League</h1>
             <nav>
                 <a href="#">Home</a>
@@ -21,7 +21,7 @@
             </nav>
         </header>
         <main>
-            <img class="banner" src="./assets/task2/design1_image2.jpg" alt="Banner">
+            <img class="banner" src="./assets/task2/design1_image2.jpg" alt="banner">
             <section>
                 <h2 class="subtitle">Upcoming Events</h2>
                 <div class="container">
