Se añadió el formulario de registro y se aplicaron estilos a este

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a href="./html/contact.html">Contact</a>
                 <a href="./html/rules.html">Rules</a>
                 <a href="./html/game_information.html">Game Info</a>
+                <a href="./html/registration.html">Registration</a>
             </nav>
         </header>
         <main>
