--- a/html/contact.html
+++ b/html/contact.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="shortcut icon" href="./assets/task2/icono_Mighty_Ducks.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/task2/icono_Mighty_Ducks.ico" type="image/x-icon">
     <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
     <header>
-        <img class="logo" src="./assets/task1/Mighty_ducks_logo.png" alt="mighty ducks logo">
+        <img class="logo" src="../assets/task1/Mighty_ducks_logo.png" alt="mighty ducks logo">
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
             <a href="../index.html">Home</a>
@@ -18,6 +18,7 @@
             <a href="#">Contact</a>
             <a href="./rules.html">Rules</a>
             <a href="./game_information.html">Game Info</a>
+            <a href="./registration.html">Registration</a>
         </nav>
     </header>
     <main>
