--- a/html/game_information.html
+++ b/html/game_information.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="./assets/task1/Mighty_ducks_logo.png" alt="mighty ducks logo">
+        <img class="logo" src="../assets/task1/Mighty_ducks_logo.png" alt="mighty ducks logo">
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
             <a href="../index.html">Home</a>
@@ -18,6 +18,7 @@
             <a href="./contact.html">Contact</a>
             <a href="./rules.html">Rules</a>
             <a href="#">Game Info</a>
+            <a href="./registration.html">Registration</a>
         </nav>
     </header>
     <main>
