se hicieron correcciones de datos en el formulario así como algunas esteticas en este

--- a/html/game_information.html
+++ b/html/game_information.html
@@ -98,7 +98,7 @@
                     </div>
                     <div class="game_details">
                         <p><b>Please direct all questions to: </b>Michael Randall, League Coordinator</p>
-                        <p class="inline"><b>Phone: </b>(630)690-8132</p> <p class="inline"><b>Email: </b><a href="Mailto:michael.randall@chihockey.org">michael.randall@chihockey.org</a></p>
+                        <p class="inline"><b>Phone: </b><a href="tel:(630)690-8132">(630)690-8132</a></p> <p class="inline"><b>Email: </b><a href="Mailto:michael.randall@chihockey.org">michael.randall@chihockey.org</a></p>
                     </div>
             </div>
         </div>
