corregidos algunos errores en los textos del formulario

--- a/html/registration.html
+++ b/html/registration.html
@@ -50,7 +50,7 @@
                 </fieldset>
                 <fieldset class="schools">
                     <h5>Which elementary school do you live near?</h5>
-                    <label for="school_select">Closest school:</label>
+                    <label for="school_select">Closest School:</label>
                     <select name="school" id="school_select">
                         <option value="aj_katzenmaier">AJ Katzenmaier</option>
                         <option value="greenbay">Greenbay</option>
@@ -88,7 +88,7 @@
                         </section>
                 </fieldset>
                 <fieldset class="check">
-                    <h5>What position(s) do you play normally? (check all that apply)</h5>
+                    <h5>What position(s) do you normally play? (check all that apply)</h5>
                     
                     <label for="foward"><input type="checkbox" name="position" id="foward" value="foward">Foward</label>
                     <label for="midfield"><input type="checkbox" name="position" id="midfield" value="midfield">Midfield</label>
@@ -96,7 +96,7 @@
                     <label for="goalkeeper"><input type="checkbox" name="position" id="goalkeeper" value="goalkeeper">Goalkeeper</label>
                 </fieldset>
                 <fieldset class="check">
-                    <h5>Uniform size:</h5>
+                    <h5>Uniform Size:</h5>
                     <label><input type="radio" name="uniform" id="youth_small" value="youth_small">Youth Small</label>
                     <label><input type="radio" name="uniform" id="medium" value="medium">Medium</label>
                     <label><input type="radio" name="uniform" id="youth_medium" value="youth_medium">Youth Medium</label>
@@ -106,7 +106,7 @@
                     <label><input type="radio" name="uniform" id="small" value="small">Small</label>
                 </fieldset>
                 <fieldset class="agreement">
-                    <h5>Permission to play</h5>
+                    <h5>Permission to Play</h5>
                     <p>
                         I, the parent or guardian of the minor registrant, agree that the registrant and I will abide all the rules of the Mighty Ducks Hockey League 
                         (MDHL). In recognizing the possibility of physical injury associated hith hockey and in consideration for the "League" accepting the registrant for its hockey programs
