se agregaron los datos faltantes en los input correspondientes a la firma del acuerdo

--- a/html/registration.html
+++ b/html/registration.html
@@ -114,9 +114,9 @@
                         practices and games, against any claim by or on behalf of the registrant as a result of the registrant's participation in the programand/orbeing transported to or from
                         MDHL sponsored activities, which transportation
                     </p>
-                    <p>By signing below, I herebyagree and authorize the above. In addition, by signing below, I also acknowledge that I have read the cancellation policy and agree to its terms.</p>
-                    <label>Parent/Guardian signature:<input type="text" required></label>
-                    <label>Date:<input type="date" required></label>
+                    <p>By entering your name below, I hereby agree and authorize the above. In addition, by signing below, I also acknowledge that I have read the cancellation policy and agree to its terms.</p>
+                    <label>Parent/Guardian signature:<input type="text" required name="parent_guardian_signature" value="parent_guardian_signature"></label>
+                    <label>Date:<input type="date" required name="date_agreement" value="date_agreement"></label>
                 </fieldset>
                 <input type="submit" value="Enviar">
             </form>
